Add ImagePullSecrets for proxy-agent (#97)
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/charts/cluster-proxy/crds/managedproxyconfigurations.yaml
+++ b/charts/cluster-proxy/crds/managedproxyconfigurations.yaml
@@ -141,6 +141,12 @@ spec:
                   image:
                     description: '`image` is the container image of the proxy agent.'
                     type: string
+                  imagePullSecrets:
+                    description: '`imagePullSecrets` defines the imagePullSecrets
+                      used by proxy-agent'
+                    items:
+                      type: string
+                    type: array
                   replicas:
                     default: 3
                     description: '`replicas` is the replicas of the agents.'
