--- a/pkg/proxyagent/agent/manifests/charts/addon-agent/templates/addon-agent-deployment.yaml
+++ b/pkg/proxyagent/agent/manifests/charts/addon-agent/templates/addon-agent-deployment.yaml
@@ -76,3 +76,7 @@ spec:
         - name: hub-kubeconfig
           secret:
             secretName: cluster-proxy-hub-kubeconfig
+      imagePullSecrets:
+      {{- range .Values.proxyAgentImagePullSecrets }}
+      - name: {{ . }}
+      {{- end }}
