--- a/pkg/proxyagent/agent/manifests/charts/addon-agent/values.yaml
+++ b/pkg/proxyagent/agent/manifests/charts/addon-agent/values.yaml
@@ -14,6 +14,7 @@ image: cluster-proxy
 tag: v0.1.3
 
 proxyAgentImage: quay.io/open-cluster-management/cluster-proxy:v0.1.4
+proxyAgentImagePullSecrets: []
 
 # Number of replicas
 replicas: 1
