--- a/hack/crd/bases/proxy.open-cluster-management.io_managedproxyconfigurations.yaml
+++ b/hack/crd/bases/proxy.open-cluster-management.io_managedproxyconfigurations.yaml
@@ -306,6 +306,21 @@ spec:
                 required:
                 - image
                 type: object
+              serviceResolvers:
+                items:
+                  properties:
+                    managedCluster:
+                      type: string
+                    namespace:
+                      type: string
+                    serviceName:
+                      type: string
+                  required:
+                  - managedCluster
+                  - namespace
+                  - serviceName
+                  type: object
+                type: array
             required:
             - authentication
             - proxyAgent
@@ -387,6 +402,24 @@ spec:
               lastObservedGeneration:
                 format: int64
                 type: integer
+              serviceURLs:
+                items:
+                  properties:
+                    managedCluster:
+                      type: string
+                    namespace:
+                      type: string
+                    serviceName:
+                      type: string
+                    url:
+                      type: string
+                  required:
+                  - managedCluster
+                  - namespace
+                  - serviceName
+                  - url
+                  type: object
+                type: array
             type: object
         type: object
     served: true
