--- a/pkg/proxyagent/agent/manifests/charts/addon-agent/templates/other-services.yaml
+++ b/pkg/proxyagent/agent/manifests/charts/addon-agent/templates/other-services.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ $.Release.Namespace }}
   name: {{ .url }}
 spec:
   type: ExternalName
