--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,13 @@
 sonar.projectKey=open-cluster-management_cluster-proxy
 sonar.projectName=cluster-proxy
 sonar.sources=.
-sonar.exclusions=**/*_test.go,/e2e/**,/cmd/**,/examples/**,/pkg/apis/**,/pkg/generated/**
+sonar.exclusions=**/*_test.go,**/test/**,**/cmd/**,**/examples/**,**/pkg/apis/**,**/pkg/common/**,**/pkg/proxyserver/**,**/pkg/generated/**,**/util/portforward.go,**/util/secrets.go
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/vendor/**,**/e2e/**
+sonar.test.exclusions=**/vendor/**,**/test/**
 sonar.go.tests.reportPaths=report.json
 sonar.go.coverage.reportPaths=coverage.out
 sonar.externalIssuesReportPaths=gosec.json
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
