--- a/charts/cluster-proxy/templates/clustermanagementaddon.yaml
+++ b/charts/cluster-proxy/templates/clustermanagementaddon.yaml
@@ -6,6 +6,10 @@ spec:
   addOnMeta:
     displayName: cluster-proxy
     description: cluster-proxy
-  addOnConfiguration:
-    crdName: managedproxyconfigurations.proxy.open-cluster-management.io
-    crName: cluster-proxy
+  supportedConfigs:
+  - group: proxy.open-cluster-management.io
+    resource: managedproxyconfigurations
+    defaultConfig:
+      name: cluster-proxy
+  - group: addon.open-cluster-management.io
+    resource: addondeploymentconfigs
