--- a/pkg/proxyagent/stolostronagent/manifests/charts/addon-agent/values.yaml
+++ b/pkg/proxyagent/stolostronagent/manifests/charts/addon-agent/values.yaml
@@ -30,6 +30,13 @@ base64EncodedCAData: Zm9vCg==
 
 serviceDomain: ""
 
-tolerations: []
-
 nodeSelector: {}
+
+tolerations:
+- key: "dedicated"
+  operator: "Equal"
+  value: "infra"
+  effect: "NoSchedule"
+- key: node-role.kubernetes.io/infra
+  operator: Exists
+  effect: NoSchedule
