Update target branch to main
Signed-off-by: GitHub <noreply@github.com>

--- a/.tekton/cluster-proxy-plyk-pull-request.yaml
+++ b/.tekton/cluster-proxy-plyk-pull-request.yaml
@@ -8,10 +8,10 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-event: '[pull_request]'
-    pipelinesascode.tekton.dev/on-target-branch: '[backplane-2.4]'
+    pipelinesascode.tekton.dev/on-target-branch: '[main]'
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: mce-24
+    appstudio.openshift.io/application: cluster-proxy
     appstudio.openshift.io/component: cluster-proxy-plyk
     pipelines.appstudio.openshift.io/type: build
   name: cluster-proxy-plyk-on-pull-request
