--- a/.github/workflows/go-presubmit.yml
+++ b/.github/workflows/go-presubmit.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   # Common versions
-  GO_VERSION: '1.21'
+  GO_VERSION: '1.20'
   GO_REQUIRED_MIN_VERSION: ''
 
 jobs:
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       - name: install Go
         uses: actions/setup-go@v2
         with:
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       - name: Linelint
         uses: fernandrone/linelint@0.0.4
   verify:
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       - name: install Go
         uses: actions/setup-go@v2
         with:
@@ -54,7 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       - name: install Go
         uses: actions/setup-go@v2
         with:
@@ -64,6 +64,7 @@ jobs:
       - name: report coverage
         uses: codecov/codecov-action@v3
         with:
+          token: ${{secrets.CODECOV_UPLOAD_TOKEN}}
           files: ./cover.out
           flags: unit
           name: unit
@@ -75,7 +76,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       - name: install Go
         uses: actions/setup-go@v2
         with:
@@ -88,7 +89,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       - name: install Go
         uses: actions/setup-go@v2
         with:
