--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -6,10 +6,14 @@ on:
       - 'v*.*.*'
 env:
   # Common versions
-  GO_VERSION: '1.21'
+  GO_VERSION: '1.20'
   GO_REQUIRED_MIN_VERSION: ''
   GITHUB_REF: ${{ github.ref }}
   CHART_NAME: 'cluster-proxy'
+
+defaults:
+  run:
+    working-directory: go/src/open-cluster-management.io/cluster-proxy
 
 jobs:
   env:
@@ -17,9 +21,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           fetch-depth: 1
+          path: go/src/open-cluster-management.io/cluster-proxy
       - name: get release version
         run: |
           echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
@@ -43,9 +48,10 @@ jobs:
         arch: [ amd64, arm64 ]
     steps:
       - name: checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           fetch-depth: 1
+          path: go/src/open-cluster-management.io/cluster-proxy
       - name: install Go
         uses: actions/setup-go@v2
         with:
@@ -69,9 +75,10 @@ jobs:
     needs: [ env, images ]
     steps:
       - name: checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           fetch-depth: 1
+          path: go/src/open-cluster-management.io/cluster-proxy
       - name: create
         run: |
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login quay.io --username ${{ secrets.DOCKER_USER }} --password-stdin
@@ -93,9 +100,10 @@ jobs:
     needs: [ env, image-manifest ]
     steps:
       - name: checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           fetch-depth: 1
+          path: go/src/open-cluster-management.io/cluster-proxy
       - name: setup helm
         uses: azure/setup-helm@v1
       - name: chart package
@@ -104,20 +112,12 @@ jobs:
           pushd release
           helm package ../charts/${{ env.CHART_NAME }}/
           popd
-      - name: generate changelog
-        run: |
-          echo "# Cluster Proxy ${{ needs.env.outputs.RELEASE_VERSION }}" > /home/runner/work/changelog.txt
       - name: publish release
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          body_path: /home/runner/work/changelog.txt
-          files: |
-            release/*.tgz
-          draft: true
-          prerelease: false
-          generate_release_notes: true
+          tag: ${{ env.RELEASE_VERSION }}
+          artifacts: "go/src/open-cluster-management.io/cluster-proxy/release/*.tgz"
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: submit charts to OCM chart repo
         uses: actions/github-script@v6
         with:
