--- a/charts/cluster-proxy/values.yaml
+++ b/charts/cluster-proxy/values.yaml
@@ -21,5 +21,5 @@ proxyServer:
   port: 8091
 
 installByPlacement:
-  placementName: ""
-  placementNamespace: ""
+  placementName: global
+  placementNamespace: open-cluster-management-global-set
