Remove vendor from sonar configuration.
Signed-off-by: GitHub <noreply@github.com>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.sources=.
 sonar.exclusions=**/*_test.go,**/test/**,**/cmd/**,**/examples/**,**/pkg/apis/**,**/pkg/common/**,**/pkg/proxyserver/**,**/pkg/generated/**,**/util/portforward.go,**/util/secrets.go,**/client/**
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/vendor/**,**/test/**
+sonar.test.exclusions=**/test/**
 sonar.go.tests.reportPaths=report.json
 sonar.go.coverage.reportPaths=coverage.out
 sonar.externalIssuesReportPaths=gosec.json
