--- a/pkg/proxyagent/agent/manifests/charts/addon-agent/values.yaml
+++ b/pkg/proxyagent/agent/manifests/charts/addon-agent/values.yaml
@@ -30,9 +30,17 @@ base64EncodedCAData: Zm9vCg==
 
 serviceDomain: ""
 
-tolerations: []
-
 nodeSelector: {}
+
+tolerations:
+- key: "dedicated"
+  operator: "Equal"
+  value: "infra"
+  effect: "NoSchedule"
+- key: node-role.kubernetes.io/infra
+  operator: Exists
+  effect: NoSchedule
+
 proxyConfig:
   HTTP_PROXY: null
   HTTPS_PROXY: null
