--- a/cmd/Dockerfile.rhtap
+++ b/cmd/Dockerfile.rhtap
@@ -19,7 +19,7 @@ ENV USER_UID=10001
 WORKDIR /
 COPY --from=builder /workspace/agent /workspace/manager ./
 
-RUN microdnf update && \
+RUN microdnf update -y && \
     microdnf clean all
 
 USER ${USER_UID}
