--- a/.github/workflows/go-postsubmit.yml
+++ b/.github/workflows/go-postsubmit.yml
@@ -9,8 +9,8 @@ on:
 
 env:
   # Common versions
-  GO_VERSION: '1.22'
-  GO_REQUIRED_MIN_VERSION: ''
+  GO_VERSION: "1.23"
+  GO_REQUIRED_MIN_VERSION: ""
 
 jobs:
   images:
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        arch: [ amd64, arm64 ]
+        arch: [amd64, arm64]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
@@ -44,7 +44,7 @@ jobs:
   image-manifest:
     name: image manifest
     runs-on: ubuntu-latest
-    needs: [ images ]
+    needs: [images]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
