--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -3,13 +3,13 @@ name: GoRelease
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
 env:
   # Common versions
-  GO_VERSION: '1.22'
-  GO_REQUIRED_MIN_VERSION: ''
+  GO_VERSION: "1.23"
+  GO_REQUIRED_MIN_VERSION: ""
   GITHUB_REF: ${{ github.ref }}
-  CHART_NAME: 'cluster-proxy'
+  CHART_NAME: "cluster-proxy"
 
 jobs:
   env:
@@ -37,10 +37,10 @@ jobs:
   images:
     name: images
     runs-on: ubuntu-latest
-    needs: [ env ]
+    needs: [env]
     strategy:
       matrix:
-        arch: [ amd64, arm64 ]
+        arch: [amd64, arm64]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
@@ -66,7 +66,7 @@ jobs:
   image-manifest:
     name: image manifest
     runs-on: ubuntu-latest
-    needs: [ env, images ]
+    needs: [env, images]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
@@ -90,7 +90,7 @@ jobs:
   release:
     name: release
     runs-on: ubuntu-latest
-    needs: [ env, image-manifest ]
+    needs: [env, image-manifest]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
