Use flag to control impersonate permission.
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/pkg/proxyagent/agent/manifests/charts/addon-agent/templates/addon-agent-clusterrole.yaml
+++ b/pkg/proxyagent/agent/manifests/charts/addon-agent/templates/addon-agent-clusterrole.yaml
@@ -3,9 +3,11 @@ kind: ClusterRole
 metadata:
   name: cluster-proxy-addon-agent-impersonator
 rules:
+{{- if ne (toString .Values.impersonatePermissionEnabled) "false" }}
 - apiGroups: [""]
   resources: ["users", "groups", "serviceaccounts"]
   verbs: ["impersonate"]
+{{- end }}
 - apiGroups: ["authentication.k8s.io"]
   resources: ["tokenreviews"]
   verbs: ["create"]
