--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,7 +2,7 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "baseBranches": [
         "main",
-        "/^backplane-.*/"
+        "/^backplane-2\\.[4-8]$/"
     ],
     "packageRules": [
         {
@@ -13,42 +13,8 @@
         },
         {
             "matchBaseBranches": [
-                "backplane-2.9",
-                "backplane-2.0",
-                "backplane-2.1",
-                "backplane-2.2",
-                "backplane-2.3",
-                "backplane-2.4"
-            ],
-            "enabled": false
-        },
-        {
-            "matchBaseBranches": [
-                "main"
-            ],
-            "matchManagers": [
-                "gomod"
-            ],
-            "enabled": false
-        },
-        {
-            "matchBaseBranches": [
-                "main"
-            ],
-            "matchManagers": [
-                "tekton"
-            ],
-            "enabled": true,
-            "addLabels": [
-                "lgtm"
-            ]
-        },
-        {
-            "matchBaseBranches": [
-                "backplane-2.8",
-                "backplane-2.7",
-                "backplane-2.6",
-                "backplane-2.5"
+                "main",
+                "/^backplane-2\\.[4-8]$/"
             ],
             "matchManagers": [
                 "gomod",
@@ -56,8 +22,17 @@
             ],
             "enabled": true,
             "addLabels": [
+                "ok-to-test",
+                "approved",
                 "lgtm"
             ]
+        },
+        {
+            "matchManagers": [
+                "gomod"
+            ],
+            "groupName": "go dependencies",
+            "groupSlug": "go-deps"
         }
     ],
     "rebaseWhen": "behind-base-branch",
@@ -65,5 +40,8 @@
     "addLabels": [
         "ok-to-test"
     ],
-    "schedule": "at any time"
+    "timezone": "Asia/Shanghai",
+    "schedule": [
+        "every monday"
+    ]
 }
