Refactor Dockerfile to simplify build commands for addon binaries by removing explicit GOOS and GOARCH settings, allowing for default architecture handling.
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/cmd/Dockerfile.rhtap
+++ b/cmd/Dockerfile.rhtap
@@ -6,8 +6,8 @@ WORKDIR /workspace
 COPY . .
 
 # Build addons
-RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -a -o agent cmd/addon-agent/main.go
-RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -a -o manager cmd/addon-manager/main.go
+RUN CGO_ENABLED=1 go build -a -o agent cmd/addon-agent/main.go
+RUN CGO_ENABLED=1 go build -a -o manager cmd/addon-manager/main.go
 
 # Use distroless as minimal base image to package the manager binary
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
