--- a/pkg/proxyagent/agent/manifests/charts/addon-agent/templates/addon-agent-clusterrolebinding.yaml
+++ b/pkg/proxyagent/agent/manifests/charts/addon-agent/templates/addon-agent-clusterrolebinding.yaml
@@ -1,7 +1,11 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
+  {{- if eq .Release.Namespace "open-cluster-management-agent-addon" }}
   name: cluster-proxy-addon-agent-impersonator
+  {{- else }}
+  name: cluster-proxy-addon-agent-impersonator:{{ .Release.Namespace }}
+  {{- end }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
