Use generateName to replace name.
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/.tekton/cluster-proxy-mce-29-pull-request.yaml
+++ b/.tekton/cluster-proxy-mce-29-pull-request.yaml
@@ -14,7 +14,7 @@ metadata:
     appstudio.openshift.io/application: release-mce-29
     appstudio.openshift.io/component: cluster-proxy-mce-29
     pipelines.appstudio.openshift.io/type: build
-  name: cluster-proxy-mce-29-on-pull-request
+  generateName: cluster-proxy-mce-29-on-pull-request
   namespace: crt-redhat-acm-tenant
 spec:
   params:
