--- a/.tekton/cluster-proxy-mce-27-push.yaml
+++ b/.tekton/cluster-proxy-mce-27-push.yaml
@@ -35,7 +35,7 @@ spec:
       - name: revision
         value: main
       - name: pathInRepo
-        value: pipelines/common.yaml
+        value: pipelines/common_mce_2.7.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-cluster-proxy-mce-27
   workspaces:
