--- a/.tekton/cluster-proxy-mce-28-push.yaml
+++ b/.tekton/cluster-proxy-mce-28-push.yaml
@@ -40,7 +40,7 @@ spec:
       - name: revision
         value: main
       - name: pathInRepo
-        value: pipelines/common.yaml
+        value: pipelines/common_mce_2.8.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-cluster-proxy-mce-28
   workspaces:
