--- a/.tekton/cluster-proxy-mce-26-push.yaml
+++ b/.tekton/cluster-proxy-mce-26-push.yaml
@@ -17,16 +17,28 @@ metadata:
   namespace: crt-redhat-acm-tenant
 spec:
   params:
-  - name: git-url
-    value: '{{source_url}}'
-  - name: revision
-    value: '{{revision}}'
-  - name: output-image
-    value: quay.io/redhat-user-workloads/crt-redhat-acm-tenant/release-mce-26/cluster-proxy-mce-26:{{revision}}
-  - name: dockerfile
-    value: cmd/Dockerfile.rhtap
-  - name: path-context
-    value: .
+    - name: git-url
+      value: '{{source_url}}'
+    - name: revision
+      value: '{{revision}}'
+    - name: output-image
+      value: quay.io/redhat-user-workloads/crt-redhat-acm-tenant/release-mce-26/cluster-proxy-mce-26:{{revision}}
+    - name: build-platforms
+      value:
+        - linux/x86_64
+        - linux/arm64
+        - linux/ppc64le
+        - linux/s390x
+    - name: dockerfile
+      value: cmd/Dockerfile.rhtap
+    - name: path-context
+      value: .
+    - name: send-slack-notification
+      value: "true"
+    - name: konflux-application-name
+      value: "release-mce-26"
+    - name: slack-member-id
+      value: "U01TX25RJ3B"
   pipelineRef:
     resolver: git
     params:
