--- a/.tekton/cluster-proxy-mce-210-pull-request.yaml
+++ b/.tekton/cluster-proxy-mce-210-pull-request.yaml
@@ -44,7 +44,7 @@ spec:
       - name: revision
         value: main
       - name: pathInRepo
-        value: pipelines/common.yaml
+        value: pipelines/common_mce_2.main.yaml
   taskRunTemplate: {}
   workspaces:
     - name: git-auth
