--- a/.tekton/cluster-proxy-mce-210-push.yaml
+++ b/.tekton/cluster-proxy-mce-210-push.yaml
@@ -47,7 +47,7 @@ spec:
       - name: revision
         value: main
       - name: pathInRepo
-        value: pipelines/common_mce_2.10.yaml
+        value: pipelines/common_mce_2.main.yaml
   taskRunTemplate: {}
   workspaces:
     - name: git-auth
