Update tekton dockerfile parameter from cmd/Dockerfile.rhtap to Dockerfile.rhtap
- Fix dockerfile parameter in both push and pull request pipeline files
- Align with required tekton configuration standards

Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/.tekton/cluster-proxy-mce-26-pull-request.yaml
+++ b/.tekton/cluster-proxy-mce-26-pull-request.yaml
@@ -33,7 +33,7 @@ spec:
       - linux/ppc64le
       - linux/s390x
   - name: dockerfile
-    value: cmd/Dockerfile.rhtap
+    value: Dockerfile.rhtap
   - name: path-context
     value: .
   pipelineRef:
