--- a/.tekton/cluster-proxy-mce-26-push.yaml
+++ b/.tekton/cluster-proxy-mce-26-push.yaml
@@ -30,7 +30,7 @@ spec:
         - linux/ppc64le
         - linux/s390x
     - name: dockerfile
-      value: cmd/Dockerfile.rhtap
+      value: Dockerfile.rhtap
     - name: path-context
       value: .
     - name: send-slack-notification
