--- a/.tekton/cluster-proxy-mce-27-pull-request.yaml
+++ b/.tekton/cluster-proxy-mce-27-pull-request.yaml
@@ -33,7 +33,7 @@ spec:
       - linux/ppc64le
       - linux/s390x
   - name: dockerfile
-    value: cmd/Dockerfile.rhtap
+    value: Dockerfile.rhtap
   - name: path-context
     value: .
   pipelineRef:
