--- a/pkg/proxyagent/stolostronagent/manifests/charts/addon-agent/templates/addon-agent-deployment.yaml
+++ b/pkg/proxyagent/stolostronagent/manifests/charts/addon-agent/templates/addon-agent-deployment.yaml
@@ -129,7 +129,7 @@ spec:
             - --ocpservice-ca=/ocpservice-ca/service-ca.crt
             - --cert=/server-cert/tls.crt
             - --key=/server-cert/tls.key
-          livesnessProbe:
+          livenessProbe:
             httpGet:
               path: /healthz
               port: 8000
