Add serviceAccountName to Tekton pipeline taskRunTemplate for backplane-2.9
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/.tekton/cluster-proxy-mce-29-pull-request.yaml
+++ b/.tekton/cluster-proxy-mce-29-pull-request.yaml
@@ -45,7 +45,8 @@ spec:
       value: main
     - name: pathInRepo
       value: pipelines/common_mce_2.9.yaml
-  taskRunTemplate: {}
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-cluster-proxy-mce-29
   workspaces:
   - name: git-auth
     secret:
