Add serviceAccountName to Tekton pipeline taskRunTemplate for backplane-2.10
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/.tekton/cluster-proxy-mce-210-push.yaml
+++ b/.tekton/cluster-proxy-mce-210-push.yaml
@@ -48,7 +48,8 @@ spec:
       value: main
     - name: pathInRepo
       value: pipelines/common_mce_2.10.yaml
-  taskRunTemplate: {}
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-cluster-proxy-mce-210
   workspaces:
   - name: git-auth
     secret:
